Re-configure for EAP6 upgrade